--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/Kev-prog-debug">Kev-prog-debug</a>.
+    Coded by <a href="https://github.com/Kev-prog-debug" target="_blank">Kev-prog-debug</a>.
   </div>
   <script src="main.js"></script>
 </body>
