--- a/index.html
+++ b/index.html
@@ -24,21 +24,10 @@
 </head>
 
 <body>
-  <div class="card-container">
-
-  </div>
-  <!-- Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-  rental and arrive in style. -->
-
+  <main>
+    <div class="card-container">
+    </div>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/Kev-prog-debug" target="_blank">Kev-prog-debug</a>.
